# cross-building-energy-forecasting

./: Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
data/bdg2/: readme.md
data/clustering/: readme.md
data/gepiii/: readme.md
data/heww/: readme.md
data/splits/: readme.md
docs/: REPRODUCE.md
figures/paper/: readme.md
logs/: readme.md
models/saved/: readme.md
results/: readme.md
scripts/: README.md  common.sh
scripts/auxiliary/: 10_run_grouping_analysis.sh  11_run_dynamic_benchmarking.sh  12_run_lag_ablation.sh  13_run_heew_deep_checks.sh  14_run_repeated_seed_checks.sh  (+1 more)
src/: README.md  ablation_target_transforms.py  aggregate_information_budget_results.py  benchmark_filtering.py  config.py  data_splitting.py  exp1_history_budget_analysis.py  exp1_per_building_analysis.py  exp1_supplementary_baselines.py  exp2_cold_start_fairness_check.py  exp3_decision_error_analysis.py  exp4_gepiii_bsplit_stratified_analysis.py  experiment1.py  experiment2.py  experiment3.py  experiment4_gepiii.py  experiment5_heew.py  experiment5_heew_lag_ablation.py  experiment5_heew_pair_enumeration.py  experiment6_lag_ablation.py  experiment7_information_budget.py  experiment8_strict_cold_start.py  feature_engineering.py  merge_repeated_exp2_batches.py  merge_repeated_main_batches.py  metrics.py  postprocess_paper10_repeats.py  render_paper_figures.py  repeated_exp2_metrics.py  repeated_exp3_sensitivity.py  repeated_main_metrics.py  runtime.py  site_analysis.py  stage1_bdg2.py  stage1_gepiii.py  verify_references_batch.py
tables/: readme.md
(+13 files in other folders)
